manifests/discovery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-agent
  namespace: discovery-agent
  labels:
    app: discovery-agent
spec:
  selector:
    app: discovery-agent
  ports:
    - name: http
      port: 8001
      targetPort: http
