manifests/discovery/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: discovery-agent-api
  namespace: discovery-agent
  labels:
    app: discovery-agent
spec:
  to:
    kind: Service
    name: discovery-agent
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
